--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
         <div class="skill-row">
           <img class="developer" src="images/developer.png" alt="" />
-          <h3>다른 스킬들</h3>
+          <h3>이정환</h3>
           <p>
-            조원 3 소개 ...
+            경영 19학번입니다!
           </p>
         </div>
         <hr />
