--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         <h2>Skills</h2>
         <div class="skill-row">
           <img class="developer" src="images/developer.png" alt="" />
-          <h3>조원 1</h3>
-          <p>
-            조원 1소개 ...
+          <h3>이정현</h3>
+          <p> 저는 경제학과 19학번 이정현입니다. 멋쟁이사자처럼 10기 백엔드입니다.
           </p>
         </div>
 
