--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
         <div class="skill-row">
           <img class="design" src="images/design.png" alt="" />
-          <h3>조원 2</h3>
+          <h3>이주용</h3>
           <p>
-            조원 2 소개 ...
+            안녕하세요. 백엔드 트랙에 속해 있는 18학번 이주용입니다. 반갑습니다.
           </p>
         </div>
 
